# RFA-Taiwan

./: Compiled_Annual_Stats_Newer.csv  Compiled_Annual_Stats_Newer_checked.csv  Compiled_Annual_Stats_Older.csv  LICENSE  README.md  RFA_transformed_tested.py  lmom.py  pyproject.toml
