[tool.poetry]
name = "sword"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.1"
pandas = "^2.2.2"
seaborn = "^0.13.2"
scipy = "^1.14.0"
openpyxl = "^3.1.5"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
